--- a/styles/app.css
+++ b/styles/app.css
@@ -13,7 +13,7 @@ h1 {
 
 
 .content{
-	padding-top: 25%;
+	padding-top: 15%;
 	text-align: center;
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                  0px 8px 13px rgba(0,0,0,0.1),
@@ -24,4 +24,17 @@ hr {
     width: 400px;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
+    background-color:#e9ecef;
+    margin-top: 0 !important;
 }
+#footer {
+    position: absolute;
+    bottom: 0 !important;
+    left: 0;
+    right: 0;
+    width: 100% !important;
+    margin-bottom: 0 !important;
+    margin-top: 3px;
+  }
+  
+  
