--- a/styles/app.css
+++ b/styles/app.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 hr {
-    width: 400px;
+    width: 100%;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
     background-color:#e9ecef;
@@ -36,5 +36,7 @@ hr {
     margin-bottom: 0 !important;
     margin-top: 3px;
   }
-  
+@media (max-width: 544px) {  
+    .titlos {font-size: 2.6rem;}
+}
   
