--- a/styles/backgroundjumb.css
+++ b/styles/backgroundjumb.css
@@ -4,7 +4,7 @@ body {
     background-position: center; 
 }
 hr {
-    width: 400px;
+    width: 100%;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
